@@ -1,6 +1,2 @@
-anypoint.platform.client_id :21139ec2db504361a1a813e3034585ad
-anypoint.platform.client_secret : 2eA545AEec6842fb8B131bd8a0ab8161
 api_secure_key: letsencryptthis1
-
---header 'client_id: 5a07543b1c2343ddb6f76458bccb9c41' \
---header 'client_secret: 332Deb3fDDf94a00A668391dECd7aBC7' \
+-M-XX:-UseBiasedLocking -M-Dfile.encoding=UTF-8 -M-XX:+UseG1GC -M-XX:+UseStringDeduplication -M-Dmule.deployment.forceParseConfigXmls=true -Danypoint.platform.gatekeeper=disabled
